--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,10 +119,10 @@ h1{
   }
 }
 
-@media screen and (max-width:450px){
+@media screen and (max-width:410px){
   .card{
-    width: 300px;
-    height: 150px;
+    width: 390x;
+    height: 190px;
     border-radius: 25px;
   }
 
@@ -136,5 +136,69 @@ h1{
 
   h4{
     font-size: 13px;
+  }
+}
+
+@media screen and (max-width:395px){
+  .card{
+    width: 380px;
+    height: 190px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:385px){
+  .card{
+    width: 370px;
+    height: 185px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:375px){
+  .card{
+    width: 360px;
+    height: 180px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:365px){
+  .card{
+    width: 350px;
+    height: 175px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:355px){
+  .card{
+    width: 340px;
+    height: 170px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:345px){
+  .card{
+    width: 330px;
+    height: 165px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:335px){
+  .card{
+    width: 320px;
+    height: 160px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width:325px){
+  .card{
+    width: 310px;
+    height: 155px;
+    border-radius: 40px;
   }
 }
