--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,30 +60,23 @@ h1{
   margin-top: 5em;
   border-radius: 70px;
   box-shadow: none;
-  transition: all 2s ease-in-out;
+  animation: apper .1s ease-in-out;
+  animation-timeline: view();
+  animation-range: cover 0% cover 50%;
+  transition: all .5s;
 }
 
 .card:hover{
-  box-shadow: 10px 10px 10px rgba(255,255,255,0.6),
-              -10px -10px 10px rgba(255,255,255,0.6);
+  transform: scale(1.05);
 }
 
-.first{
-  background-image: url('../img/nosso-trabalho.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.second{
-  background-image: url('../img/agendamento.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.third{
-  background-image: url('../img/duvidas-gerais.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+@keyframes apper{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
 
 .footer{
@@ -92,7 +85,7 @@ h1{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 2em; 
+  margin-top: 2em;
 }
 
 .socialLinks{
